# bzapi

./: .gitignore  Cargo.toml  bacon.toml  build.rs  diesel.toml  rustfmt.toml
bz-partial/: Cargo.toml
bz-partial/src/: lib.rs
bz-partial/tests/ui/: success.rs
bz-partial/tests/ui/ui-fail/: failure.rs
bzapi/: Cargo.toml
bzapi-lib/: Cargo.toml
bzapi-lib/src/: adaptor.rs  api.rs  api_context.rs  extractors.rs  handlers.rs  lib.rs  logger.rs  misc.rs  models.rs  providers.rs  routes.rs  schema.rs
bzapi-lib/src/extractors/: provider.rs
bzapi-lib/src/handlers/: auth_handler.rs  user_handler.rs
bzapi-lib/src/misc/: api_docs.rs  swagger_ui.rs
bzapi-lib/src/models/: access.rs  account.rs  category.rs  comment.rs  mod.rs  post.rs  provider.rs  session.rs  tag.rs  thread.rs  user.rs  verification_token.rs
bzapi-lib/src/openapi/: doc.rs
bzapi-lib/src/providers/: _google.rs  discord.rs  errors.rs  github.rs  google.rs  oauth2_provider.rs  provider.rs
bzapi-lib/src/routes/: auth.rs  comment.rs  errors.rs  mod.rs  post.rs  tag.rs  user.rs
bzapi/src/: config.rs  main.rs  models.rs
migrations/sqlite/2025-04-12-144711_create_user_table/: down.sql  up.sql
migrations/sqlite/2025-04-12-144909_create_account_table/: down.sql  up.sql
migrations/sqlite/2025-04-12-144912_create_session_table/: down.sql  up.sql
migrations/sqlite/2025-04-12-144925_create_verification_token_table/: down.sql  up.sql
migrations/sqlite/2025-04-19-120927_create_post_table/: down.sql  up.sql
migrations/sqlite/2025-04-19-120944_create_comment_table/: down.sql  up.sql
migrations/sqlite/2025-04-19-120950_create_tag_table/: down.sql  up.sql
tests/: test_csrf.rs
