[package]
name = "bzapi-lib"
version = "0.1.0"
edition = "2024"

[features]
default = ["sqlite"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]

[dependencies]
# My internal dependencies
# TODO: 
bzauth-rs = { path = "../../bzauth-rs/bzauth-rs", features = [
  "adapt_diesel",
  "runtime_axum",
] }

# Core dependencies
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

# Environment
dotenvy = { version = "0.15.0" }

# Dependencies for HTTP client
reqwest = "0.12.12"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }

# Dependencies for future TS generation
openapi = "0.1.5"
oauth2 = "5.0.0"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }

# Dependencies for database
diesel = { version = "2.2.8", features = ["sqlite", "postgres", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
chrono = "0.4.40"

# Dependencies for logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Utility dependencies
async-trait = "0.1.86"
dyn-clone = "1.0.18"
paste = "1.0.15"

[dev-dependencies]
# sqlx-cli = { version = "0.8.3", features = ["postgres"] }
# diesel_cli = { version = "2.2.7", features = ["sqlite", "postgres"] }
