[package]
name = "bzapi"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# Core
bzapi-lib = { path = "../bzapi-lib" }

# Runtime
tokio = { version = "1.44.2", features = ["full"] }
axum = { version = "0.8.1", features = ["macros"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }